  ********************************************
  Copyright (c) 2009 - 2010 papukaija
  
  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License version 3
  as published by the Free Software Foundation.

  ********************************************
  $HeadURL$
  $Revision$
**********************************************
2010-09-05 {papukaija}
Version 2.2
- Moved from inspekt's $strict = FALSE to _source as the $strict has no effect 
  inside a function (but these superglobals are of course deleted imediately after
  they're not needed)
************************************ 
2010-08-23 {papukaija}
Version 2.1
- Moved README.txt and TODO.txt to /docs/english.html
- Updated few links to use /docs/<user's_lang>.html through greybox
- Changed getRaw to getAlpha in cookie's reading
- This plugin uses now a language fallback
- Added form token to clenup's form
- Added 'success' css class to cookie sender's msg_box() in cookie.php
- inspekt inside external_tracker_footer() is loaded with $strict = FALSE; to
  use php based trackers but the superglobals are removed at functions's end
- Fixed redirecting url in cookie.php
************************************
2010-06-26 {papukaija}
Version 2.0
- Added support for OWA, BBClone and CrawlTrack
- Added explanation for config screen's Extra setting to README.txt
- Updated Google Analytics's tracker code (removed pageTracker._initData();
  which is now only usefull with frame sites, see http://tinyurl.com/33qtqsp )
- DB schema: Changed the varchar for tracker_extra to 50
************************************
2010-05-26 {papukaija}
Version 2.0_beta1
- Changed plugin's name to External tracker
- Added support for multiple trackers (currently Google Analytics and Piwik)
- Included database and form related code from the Social bookmark plugin
- The Chinese, Spanish, German and Dutch lang files are adapted to v. 2.x but not translated